fixed issue, now popup updates dynamically

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <textarea name="editor" id="text_space" cols=30% rows=30%>
+    <textarea name="editor" id="text_space">
         This editor has a synonym Lookup feature!
     </textarea>
 </body>
