revised code + minor changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tiny.cloud/1/rvlpd09j4e1a7wph1g6if5j5k5kxudin72m4cwwvgoeu6c9w/tinymce/5/tinymce.min.js"></script>
     <script>
         tinymce.init({
-            selector: "textarea",
+            selector: "#text_space",
             plugins: "synonym",
             toolbar: "undo redo | bold italic underline strikethrough | alignleft aligncenter alignright alignjustify | indent outdent | synonym"
         });
@@ -19,7 +19,7 @@
 
 <body>
     <textarea name="editor" id="text_space">
-        This editor has a synonym Lookup feature!
+        This editor has a Synonym Lookup feature!
     </textarea>
 </body>
 </html>
